--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,10 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- <script
+      async
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCwH24inuL8n1Ece_OkFrLy-6VL0v4xb_s&libraries=places&callback=initMap"
+    ></script> -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
